--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
-    <string name="app_name">TowerDefenseApp</string>
+    <!--General-->
+    <string name="app_name">TowerDefense</string>
+    <!--Common Auth-->
+    <string name="username_label">Username</string>
+    <string name="password_label">Password</string>
+    <!--Login-->
+    <string name="login_title">Login to Continue Your Defense</string>
+    <string name="login_button_text">Login</string>
+    <string name="forgot_password_button_text">Forgot password?</string>
+    <string name="create_account_button_text">Create Account</string>
+    <!--Register-->
+    <string name="register_title">Register to Start Your Defense</string>
+    <string name="confirm_password_label">Confirm Password</string>
+    <string name="register_button_text">Register</string>
 </resources>
